Bug 118802 - Closing the Input field dialog modifies the document
Summary: Closing the Input field dialog modifies the document
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0 target:6.1.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-07-17 15:04 UTC by Xisco Faulí
Modified: 2018-07-19 16:26 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-07-17 15:04:36 UTC
Steps to reproduce:
1. Open attachment 143536 [details] from bug 118742 -> Input field dialog will be displayed
2. Press Alt + F4 -> The Input field dialog is closed
3. Press Alt + F4 to close LibreOffice

Observed behaviour: the document has been modified and LibreOffice ask to save the changes.

Expected behaviour: no change has been done to the document, LibreOffice should close without asking to save.

Reproduced in

Version: 6.2.0.0.alpha0+
Build ID: f543b6a0ac6cf30922c1a1ae9bfce1d605f1d4f1
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded
Comment 1 Xisco Faulí 2018-07-17 15:05:50 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=c8780642a5e8dc0bdcc97940ee7d9cacdc64c928

author	Caolán McNamara <caolanm@redhat.com>	2018-04-16 13:10:48 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2018-04-17 11:33:38 +0200
commit c8780642a5e8dc0bdcc97940ee7d9cacdc64c928 (patch)
tree 0256fe5f3886b17e9141e1bee5510254940addfd
parent cdb14b4f079e56243c55029e4322f587fd6335b0 (diff)
weld SwFieldInputDlg
and GetWindowState/SetWindowState are unused as it turns out

Bisected with: linux-6.1

Adding Cc: to Caolán McNamara
Comment 2 Commit Notification 2018-07-18 20:13:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f48d1cf923231cbfcd663c5f97657d04073793b5

Resolves: tdf#118802 map GTK_RESPONSE_DELETE_EVENT to RET_CANCEL

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Caolán McNamara 2018-07-18 20:16:02 UTC
backport to 6-1 in gerrit
Comment 4 Commit Notification 2018-07-19 10:20:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a4a523aadea5c966223955517049c1246872aad9&h=libreoffice-6-1

Resolves: tdf#118802 map GTK_RESPONSE_DELETE_EVENT to RET_CANCEL

It will be available in 6.1.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2018-07-19 16:26:40 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: 934c7fdd23c95858fba022ba1fe7c00d23f502b5
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

@Caolán, Thanks for the quick fix!!