Resolves: tdf#118802 map GTK_RESPONSE_DELETE_EVENT to RET_CANCEL

Change-Id: I8285f329e4672c90f47d96ccffe60c21c565dde7
Reviewed-on: https://gerrit.libreoffice.org/57656
Tested-by: Jenkins
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>